<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ll_MainBody"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Etiqueta"
        style="@style/tv_OutputText"
        android:text="@string/tv_OutputText"
        />

    <LinearLayout android:id="@+id/ll_First"
        style="@style/ll_Linear">
        <Button
            android:id="@+id/Clean"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateAC"
            tools:text="AC"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Minus"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateSign"
            tools:text="+/-"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Porcentaje"
            style="@style/btn_Operate"
            android:text="@string/btn_OperatePercent"
            tools:text="%"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Divide"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateDivision"
            tools:text="/"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/ll_Second"
        style="@style/ll_Linear">
        <Button
            android:id="@+id/Siete"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand7"
            tools:text="7"
            android:singleLine="false"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Ocho"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand8"
            tools:text="8"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Nueve"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand9"
            tools:text="9"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Multiplica"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateMultiplication"
            tools:text="X"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/ll_Third"
        style="@style/ll_Linear">
        <Button
            android:id="@+id/Cuatro"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand4"
            tools:text="4"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Cinco"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand5"
            tools:text="5"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Seis"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand6"
            tools:text="6"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Resta"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateSubtraction"
            tools:text="-"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/ll_Fourth"
        style="@style/ll_Linear">
        <Button
            android:id="@+id/Uno"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand1"
            tools:text="1"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Dos"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand2"
            tools:text="2"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Tres"
            style="@style/btn_Operand"
            android:text="@string/btn_Operand3"
            tools:text="3"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Suma"
            style="@style/btn_Operate"
            android:text="@string/btn_OperateAddition"
            tools:text="+"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/ll_Fifth"
        style="@style/ll_Linear">
        <Button
            android:id="@+id/Cero"
            style="@style/btn_OperandZero"
            android:text="@string/btn_Operand0"
            tools:text="0"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Punto"
            style="@style/btn_OperandDot"
            android:text="@string/btn_OperandDot"
            tools:text="."
            android:onClick="onClick"/>
        <Button
            android:id="@+id/Igual"
            style="@style/btn_OperateAnswers"
            android:text="@string/btn_OperateAnswers"
            tools:text="="
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>